--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Odin Landing Page</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
   </head>
   <body></body>
 </html>
