Add HTML skeleton

--- a/index.html
+++ b/index.html
@@ -9,5 +9,68 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="header-logo">Header Logo</div>
+      <div class="header-links">
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
+    </div>
+    <div class="content-1">
+      <div class="hero-main-text">This website is awesome</div>
+      <div class="hero-sec-text">
+        This website has some subtext that goes here under the main title. It's
+        a smaller font and the color is lower contrast
+      </div>
+      ]
+      <div class="button"><a href="#">Sign Up</a></div>
+    </div>
+    <div class="content-2">
+      <div class="info-header-text">Some random information.</div>
+      <div class="card-group">
+        <div class="card">
+          <div class="card-image"></div>
+          <div class="card-text">
+            this is some some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image"></div>
+          <div class="card-text">
+            this is some some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image"></div>
+          <div class="card-text">
+            this is some some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image"></div>
+          <div class="card-text">
+            this is some some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content-3">
+      <div class="quote-text"></div>
+      <div class="attribution-text"></div>
+    </div>
+    <div class="content-4">
+      <div class="cta-block">
+        <div class="cta-headline">Call to Action! It's time</div>
+        <div class="cta-subtext">
+          Sign up for our product by clicking that button right over there!
+        </div>
+        <div class="button cta-button">Sign Up</div>
+      </div>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
+  </body>
 </html>
