--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
       </div>
     </div>
     <div class="content-1">
-      <div class="hero-main-text">This website is awesome</div>
-      <div class="hero-sec-text">
-        This website has some subtext that goes here under the main title. It's
-        a smaller font and the color is lower contrast
+      <div>
+        <div class="hero-main-text">This website is awesome</div>
+        <div class="hero-sec-text">
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
+        </div>
+        <div class="button"><a href="#">Sign Up</a></div>
       </div>
-      ]
-      <div class="button"><a href="#">Sign Up</a></div>
+      <div class="image-placeholder">this is a placeholder for an image</div>
     </div>
     <div class="content-2">
       <div class="info-header-text">Some random information.</div>
