--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="cta-subtext">
           Sign up for our product by clicking that button right over there!
         </div>
-        <div class="button cta-button">Sign Up</div>
+        <div class="button cta-button"><a href="#">Sign Up</a></div>
       </div>
     </div>
     <div class="footer">Copyright © The Odin Project 2021</div>
