--- a/index.html
+++ b/index.html
@@ -11,67 +11,81 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">
-        <div class="header-logo">Header Logo</div>
-        <div class="header-links">
-          <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-          </ul>
-        </div>
-      </div>
       <div class="content-1">
-        <div>
-          <div class="hero-main-text">This website is awesome</div>
-          <div class="hero-sec-text">
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast
+        <div class="header">
+          <div class="header-logo">Header Logo</div>
+          <div class="header-links">
+            <ul>
+              <li>header link one</li>
+              <li>header link two</li>
+              <li>header link three</li>
+            </ul>
           </div>
-          <div class="button"><a href="#">Sign Up</a></div>
         </div>
-        <div class="image-placeholder">this is a placeholder for an image</div>
+        <div class="hero">
+          <div>
+            <div class="hero-main-text">This website is awesome</div>
+            <div class="hero-sec-text">
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast
+            </div>
+            <div class="button"><a href="#">Sign Up</a></div>
+          </div>
+          <div class="image-placeholder">
+            this is a placeholder for an image
+          </div>
+        </div>
       </div>
       <div class="content-2">
-        <div class="info-header-text">Some random information.</div>
-        <div class="card-group">
-          <div class="card">
-            <div class="card-image"></div>
-            <div class="card-text">
-              this is some some subtext under an illustration or image
+        <div class="info">
+          <div class="info-header-text">Some random information.</div>
+          <div class="card-group">
+            <div class="card">
+              <div class="card-image"></div>
+              <div class="card-text">
+                this is some some subtext under an illustration or image
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-image"></div>
-            <div class="card-text">
-              this is some some subtext under an illustration or image
+            <div class="card">
+              <div class="card-image"></div>
+              <div class="card-text">
+                this is some some subtext under an illustration or image
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-image"></div>
-            <div class="card-text">
-              this is some some subtext under an illustration or image
+            <div class="card">
+              <div class="card-image"></div>
+              <div class="card-text">
+                this is some some subtext under an illustration or image
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-image"></div>
-            <div class="card-text">
-              this is some some subtext under an illustration or image
+            <div class="card">
+              <div class="card-image"></div>
+              <div class="card-text">
+                this is some some subtext under an illustration or image
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="content-3">
-        <div class="quote-text"></div>
-        <div class="attribution-text"></div>
+        <div class="quote">
+          <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </div>
+          <div class="attribution-text">- Thor, God of Thunder</div>
+        </div>
       </div>
       <div class="content-4">
-        <div class="cta-block">
-          <div class="cta-headline">Call to Action! It's time</div>
-          <div class="cta-subtext">
-            Sign up for our product by clicking that button right over there!
+        <div class="cta">
+          <div class="cta-block">
+            <div class="cta-headline">Call to Action! It's time</div>
+            <div class="cta-subtext">
+              Sign up for our product by clicking that button right over there!
+            </div>
+            <div class="button cta-button"><a href="#">Sign Up</a></div>
           </div>
-          <div class="button cta-button"><a href="#">Sign Up</a></div>
         </div>
       </div>
       <div class="footer">Copyright © The Odin Project 2021</div>
