--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="hero">
-          <div>
+          <div class="hero-text">
             <div class="hero-main-text">This website is awesome</div>
             <div class="hero-sec-text">
               This website has some subtext that goes here under the main title.
@@ -32,7 +32,7 @@
             <div class="button"><a href="#">Sign Up</a></div>
           </div>
           <div class="image-placeholder">
-            this is a placeholder for an image
+            <div>this is a placeholder for an image</div>
           </div>
         </div>
       </div>
