--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <div class="cta-subtext">
               Sign up for our product by clicking that button right over there!
             </div>
-            <div class="button cta-button"><a href="#">Sign Up</a></div>
           </div>
+          <div class="button"><a href="#">Sign Up</a></div>
         </div>
       </div>
       <div class="footer">Copyright © The Odin Project 2021</div>
